--- a/web_modules/Sidebar/styles.css
+++ b/web_modules/Sidebar/styles.css
@@ -52,6 +52,7 @@
       padding: .25rem .5rem;
       background: none;
       border: none;
+      border-radius: 2px;
       font-family: inherit;
       font-size: .8rem;
       color: #fff;
